service-entry/mysql-2-versions/client-deployment.yml
#
# A simple ServiceEntry can capture the traffic
# without the ServiceEntry, the request still can send out but will go through the PassthroughCluster 
#
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql-client
  labels:
    app: mysql-client
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql-client
  template:
    metadata:
      labels:
        app: mysql-client
        version: v1
    spec:
      containers:
      - name: mysql-client
        image: mysql:8
        command: ["bash"]
        args: ["/root/traffic.sh"]
        volumeMounts:
        - name: mysql-script-vol
          mountPath: /root/mysql
      volumes:
      - name: mysql-script-vol
        configMap:
          name: mysql-script-configmap
