service-entry/mysql-2-versions/destination-rules.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virt-svc
spec:
  hosts:
  - docker-mysql-v5.hung.org.hk
  tcp:
  - match:
    - port: 3306
    route:
    - destination:
        host: docker-mysql-v5.hung.org.hk
        subset: v5
      weight: 80
    - destination:
        host: docker-mysql-v8.hung.org.hk
        subset: v8
      weight: 20
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: mysql-dest-rule
spec:
  host: docker-mysql-v5.hung.org.hk
  subsets:
  - name: v5
    labels:
      database: mysql
      version: v5
    trafficPolicy:
      connectionPool:
        tcp:
          maxConnections: 10 
  - name: v8
    labels:
      database: mysql
      version: v8
    trafficPolicy:
      outlierDetection:
        consecutiveGatewayErrors: 5
        interval: 2s
