service-entry/mysql-2-versions/with-workload-entries.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virt-svc
spec:
  hosts:
  - 192.168.28.134
  tcp:
  - route:
    - destination:
        host: mysql-server
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-svc-entry
spec:
  hosts:
  - mysql-server
  location: MESH_INTERNAL
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  resolution: STATIC
  endpoints:
  - address: 192.168.28.134
    ports:
      mysql: 3306
    weight: 10
  - address: 192.168.28.134
    ports:
      mysql: 3307
    weight: 90
