service-entry/mysql-2-versions/with-workloadSelector.yml
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: mysql-virt-svc
spec:
  hosts:
  - 192.168.28.134
  tcp:
  - route:
    - destination:
        host: mysql-server
---
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: mysql-svc-entry
spec:
  hosts:
  - mysql-server
  location: MESH_INTERNAL
  ports:
  - number: 3306
    name: mysql
    protocol: TCP
  resolution: STATIC
  workloadSelector:
    labels:
      database: mysql
